--- a/Copy_of_Mini_Projects_2.ipynb
+++ b/Copy_of_Mini_Projects_2.ipynb
@@ -288,26 +288,28 @@
       "metadata": {
         "id": "xbF5fwWXOxwR",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 128
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "70b63712-fa47-4323-de4a-d38d38beeee7"
+        "outputId": "e9288f7d-9c92-4a40-c4e9-2ca8f2135e5c"
       },
       "source": [
         "for i in range(6):\n",
         "  print(\"#\"+ i*\" \"+ \"#\" )\n",
-        "  for i in range(7):\n",
-        "  print(\"*\"- i*\" \"- \"*\")\n"
+        " \n"
       ],
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-551cb81b3e2e>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print(\"*\"- i*\" \"- \"*\")\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-          ]
+          "output_type": "stream",
+          "text": [
+            "##\n",
+            "# #\n",
+            "#  #\n",
+            "#   #\n",
+            "#    #\n",
+            "#     #\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -348,10 +350,9 @@
       "metadata": {
         "id": "lidYoHbhRUZ5",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 330
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b8dc091b-9ed8-49e0-96f0-08f5acb3f7b9"
+        "outputId": "eafb4048-35f3-4c0d-ca2e-2ca30bc2427a"
       },
       "source": [
         "import random\n",
@@ -372,34 +373,23 @@
         "  z = x + y\n",
         "  return z   \n",
         "\n",
-        "def correct(x):\n",
+        "def correct():\n",
         "  print('congratulations') \n",
         "\n",
-        "def not_correct():\n",
+        "def not_correct(x):\n",
         "  print(\"wrong answer, right answer equels\", x)\n",
         "\n",
         "main()  \n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "325 405 what is the sum of 2 numbers?730\n"
+            "294 236 what is the sum of 2 numbers?60\n",
+            "wrong answer, right answer equels 530\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-11207998ab10>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"wrong answer, right answer equels\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-13-11207998ab10>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m   \u001b[0mstudent_answer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'what is the sum of 2 numbers?'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mstudent_answer\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mcorrect_answer\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mcorrect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m   \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mnot_correct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorrect_answer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: correct() missing 1 required positional argument: 'x'"
-          ]
         }
       ]
     },
@@ -437,15 +427,14 @@
       "metadata": {
         "id": "YUuP_mvpIhBx",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 370
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2a044dc4-2dec-4375-a76c-8a0904f219d3"
+        "outputId": "9035660f-4c01-4687-b35a-c53dd3320ca4"
       },
       "source": [
         "def main():\n",
         "  mass = float(input('please enter the mass of of the object'))\n",
-        "  velocity = (input('please enter the velocity of of the object'))\n",
+        "  velocity = float(input('please enter the velocity of of the object'))\n",
         "  kinetic_energy = KE(mass,velocity)\n",
         "  print('KE equal',kinetic_energy)\n",
         "\n",
@@ -455,28 +444,16 @@
         "\n",
         "main ()  "
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "please enter the mass of of the object40\n",
-            "please enter the velocity of of the object65\n"
+            "please enter the mass of of the object60\n",
+            "please enter the velocity of of the object30\n",
+            "KE equal 27000.0\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-2f324ae4f50c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mke\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mmain\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-7-2f324ae4f50c>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mmass\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'please enter the mass of of the object'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mvelocity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'please enter the velocity of of the object'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0mkinetic_energy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKE\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmass\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvelocity\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkinetic_energy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-7-2f324ae4f50c>\u001b[0m in \u001b[0;36mKE\u001b[0;34m(m, v)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mKE\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m   \u001b[0mke\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.5\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mm\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mke\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for ** or pow(): 'str' and 'int'"
-          ]
         }
       ]
     },
